fix: Changed spacing between content

--- a/web/css/reservas.css
+++ b/web/css/reservas.css
@@ -23,7 +23,6 @@ h2 h1 {
 #ubicacion {
   color: #ffffff;
   background: #80AB9F ;
-  padding: 1rem;
   border-radius: 8px;
 }
 
